# Lunar

./: .dockerignore  .env.example  .gitignore  .mailmap  APEX_COMPETITIVE_ANALYSIS.md  APEX_LUNAR_COMPARISON.py  APEX_LUNAR_FORMAT_ANALYSIS.py  APEX_VS_LUNAR_ANALYSIS.md  APEX_vs_LUNAR_EFFICIENCY.md  BOUNDARY_FIX_SUMMARY.md  COMPARISON_WITH_APEX.md  COMPETITION_COMPLIANCE_REPORT.md  CURRENT_STATUS.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_FIX_STATUS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STEPS.txt  DEPLOYMENT_VERIFICATION.md  Dockerfile  ENHANCEMENT_COMPLETION_REPORT.md  ENHANCEMENT_IMPLEMENTATION_PLAN.md  FINAL_SESSION_SUMMARY.md  FINAL_SUBMISSION_SUMMARY.md  FINAL_VERIFICATION_CHECKLIST.md  FIX_SUMMARY.md  HF_SPACES_DEPLOYMENT.md  HF_SPACES_DEPLOYMENT_GUIDE.md  HF_SPACES_FIX.md  HF_SPACES_QUICK_START.py  HF_SPACES_REBUILD_GUIDE.md  HONEST_POSITIONING.md  IMPLEMENTATION_COMPLETE.md  LUNAR_UPGRADE_COMPLETE.md  LUNAR_V2_EFFICIENCY_UPGRADES.md  LUNAR_V3_STRATEGY.md  OPENENV_COMPLIANCE_REPORT.md  OPENENV_REQUIREMENTS_CHECKLIST.md  OPTIMIZATION_REPORT.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_FIX_EXPLANATION.md  (+103 more)
.sessions/: lunar.db
content_moderation_env/: __init__.py  environment.py  graders.py  graders_v1.py  tasks.py
platform/: __init__.py
platform_layer/core/: os_layer.py
platform_layer/services/: __init__.py
scripts/: validate-submission.sh
server/: __init__.py  app.py
tests/: DOCKER_STATUS.md  comprehensive_boundary_audit.py  debug_task9.py  deep_precision_test.py  test_api.py  test_environment.py  test_http.py  test_json_boundaries.py  test_score_boundaries.py  verify_all_tasks_boundary_safe.py  verify_full.py  verify_live_v32.py  verify_scores.py
warehouse_env/: COMPLETION_SUMMARY.md  DEPLOYMENT_READINESS_REPORT.py  Dockerfile  HOW_TO_TEST.md  PLATFORM_SUMMARY.md  README.md  __init__.py  deployment_report.json  docker-compose.yml  graders.py  inference.py  openenv.yaml  platform_start.py  requirements.txt  test_env.py  test_inference_format_quick.py  test_logging.py  verify_services.py
warehouse_env/platform/: cli.py  platform.py
warehouse_env/platform/agents/: __init__.py  agent_layer.py
warehouse_env/platform/core/: __init__.py
warehouse_env/platform/orchestration/: __init__.py  orchestrator.py
warehouse_env/platform/services/: service_layer.py
warehouse_env/warehouse_env/: __init__.py  __main__.py  env.py  graders.py  graders_comprehensive.py  graders_enhanced.py  models.py  multi_domain_env.py  sandbox.py  server.py  server_multi_domain.py  session_manager.py  session_manager_hybrid.py  task_config.py
