[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-env"
version = "1.0.0"
description = "Real-world warehouse inventory management RL environment"
authors = [{name = "OpenEnv Team", email = "team@openenv.dev"}]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "openenv>=0.1.0",
]

[project.scripts]
server = "warehouse_env.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.setuptools]
packages = ["warehouse_env"]
